# BE_WE

./: .gitignore  CMakeLists.txt  INSTALL.md  OPERATOR.md  README.md  band_categories.json  bewe-install-udev.sh  build_appimage.sh  imgui.ini
AppDir/: .DirIcon  AppRun  bewe.desktop
AppDir/usr/lib/: libGLEW.so.2.2  libasound.so.2  libbladeRF.so.2  libfftw3f.so.3  libglfw.so.3  libmbe.so.1  librtlsdr.so.2  libusb-1.0.so.0
AppDir/usr/share/applications/: bewe.desktop
BackUp/: CMakeLists.txt
BackUp/src/: streaming_viewer.cpp
Backup/src/: Back_Up_Code.cpp  view_fft.cpp
assets/: band_plan_default.json
assets/tle/: SOI_tle.txt  etc_tle.txt  sample.txt  starlink_tle.txt
central/: CMakeLists.txt  central_main.cpp  central_mission_archive.cpp  central_proto.hpp  central_server.cpp  central_server.hpp  emitter_db.cpp  emitter_db.hpp  info_parse.cpp  info_parse.hpp  test_emitter_db.cpp
decoder/AIS/: ais_decoder.py  ais_payload.py  ais_pipe.py  check_raw.py  hdlc.py  message_types.py  nrzi.py  verify_baseband.py  verify_wav.py
libs/imgui/: imgui_widgets.cpp
packaging/: install-app.sh
relay/: CMakeLists.txt  relay_main.cpp  relay_proto.hpp  relay_server.cpp  relay_server.hpp
src/: MathTimeLib.cpp  acars_db.cpp  acars_decode.cpp  acars_decode.hpp  acars_view.cpp  ais.cpp  ais_decode.hpp  alert.cpp  audio.cpp  audio.hpp  audio_playback.cpp  audio_playback.hpp  auto_id.cpp  auto_id.hpp  bewe_paths.hpp  bladerf_io.cpp  central_client.cpp  central_client.hpp  channel.hpp  cli_host.cpp  config.hpp  constellation.cpp  demod.cpp  demod_panel.cpp  digi_demod.cpp  dmr.cpp  eid_compute.cpp  fft_viewer.cpp  fft_viewer.hpp  globe.cpp  globe.hpp  host_band_categories.cpp  host_band_categories.hpp  host_band_plan.cpp  host_band_plan.hpp  host_state.cpp  host_state.hpp  hw_config.hpp  hw_detect.cpp  iq_filename.hpp  (+57 more)
src/modules/: modview.hpp
src/modules/5g/: 5g_module.cpp
src/modules/acars/: acars_db.hpp  acars_decode.cpp  acars_decode.hpp  acars_meta.hpp  acars_module.cpp  acars_module.hpp  acars_view.cpp
src/modules/adsb/: adsb_decode.cpp  adsb_decode.hpp  adsb_meta.hpp  adsb_module.cpp  adsb_module.hpp  adsb_view.cpp
src/modules/ais/: ais_decode.cpp  ais_decode.hpp  ais_fp.hpp  ais_meta.hpp  ais_module.cpp  ais_module.hpp  ais_view.cpp
src/modules/btle/: btle_decode.cpp  btle_decode.hpp  btle_meta.hpp  btle_module.cpp  btle_module.hpp  btle_view.cpp
src/modules/common/: map_view.cpp  modview_map.hpp
src/modules/dmr/: dmr_ambe.hpp  dmr_decode.cpp  dmr_decode.hpp  dmr_fec.hpp  dmr_meta.hpp  dmr_module.cpp  dmr_module.hpp  dmr_sync.hpp  dmr_view.cpp
src/modules/lte/: lte_module.cpp
src/modules/wifi/: wifi_decode.cpp  wifi_decode.hpp  wifi_dsss.hpp  wifi_meta.hpp  wifi_module.cpp  wifi_module.hpp  wifi_ofdm.hpp  wifi_view.cpp
tools/: build_aircraft_db.py  dmr_offline.cpp  dmr_selftest.cpp  dmr_stream_test.cpp  dmr_voice_wav.cpp  wifi_dsss.cpp  wifi_offline.cpp  wifi_selftest.cpp  wifi_selftest2.cpp
